--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -92,17 +92,17 @@
                     </select>
                 </div>
 
-<!--                &lt;!&ndash; Height &ndash;&gt;-->
-<!--                <div class="form-group">-->
-<!--                    <label for="height">Ύψος (1.45 - 2.20m)*</label>-->
-<!--                    <input type="number" id="height" name="height" min="1.45" max="2.20" step="0.01" required>-->
-<!--                </div>-->
+                <!-- Height -->
+                <div class="form-group">
+                    <label for="height">Ύψος (1.45 - 2.20m)*</label>
+                    <input type="number" id="height" name="height" min="1.45" max="2.20" step="0.01">
+                </div>
 
-<!--                &lt;!&ndash; Weight &ndash;&gt;-->
-<!--                <div class="form-group">-->
-<!--                    <label for="weight">Βάρος (40 - 160kg)*</label>-->
-<!--                    <input type="number" id="weight" name="weight" min="40" max="160" required>-->
-<!--                </div>-->
+                <!-- Weight -->
+                <div class="form-group">
+                    <label for="weight">Βάρος (40 - 160kg)*</label>
+                    <input type="number" id="weight" name="weight" min="40" max="160">
+                </div>
             </div>
 
             <!-- Country -->
