--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -8,103 +8,154 @@
 <body>
 <h1>User Profile</h1>
 
-<div id="userDetails">
-  <p>Username: <span id="username"></span></p>
-  <p>Email: <input id="email" type="email"></p>
-  <p>First Name: <input id="firstname" type="text"></p>
-  <p>Last Name: <input id="lastname" type="text"></p>
-  <p>Birthdate: <input id="birthdate" type="date"></p>
-  <p>Gender: <select id="gender">
-    <option value="male">Male</option>
-    <option value="female">Female</option>
-    <option value="other">Other</option>
-  </select></p>
-  <p>Country: <input id="country" type="text"></p>
-  <p>Address: <input id="address" type="text"></p>
-  <p>Municipality: <input id="municipality" type="text"></p>
-  <p>Prefecture: <input id="prefecture" type="text"></p>
-  <p>Job: <input id="job" type="text"></p>
-  <p>Telephone: <span id="telephone"></span></p>
-  <p>AFM: <span id="afm"></span></p>
-  <p>Latitude: <input id="latitude" type="text"></p>
-  <p>Longitude: <input id="longitude" type="text"></p>
+<!-- User Profile Details -->
+<div id="userProfile">
+  <p>
+    Username: <span id="usernameDisplay"></span>
+  </p>
+  <p>
+    Email: <span id="emailDisplay"></span>
+    <input id="email" type="email" style="display: none;">
+    <button id="editEmail">Edit</button>
+  </p>
+  <p>
+    First Name: <span id="firstnameDisplay"></span>
+    <input id="firstname" type="text" style="display: none;">
+    <button id="editFirstname">Edit</button>
+  </p>
+  <p>
+    Last Name: <span id="lastnameDisplay"></span>
+    <input id="lastname" type="text" style="display: none;">
+    <button id="editLastname">Edit</button>
+  </p>
+  <p>
+    Birthdate: <span id="birthdateDisplay"></span>
+    <input id="birthdate" type="date" style="display: none;">
+    <button id="editBirthdate">Edit</button>
+  </p>
+  <p>
+    Gender: <span id="genderDisplay"></span>
+    <select id="gender" style="display: none;">
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+      <option value="other">Other</option>
+    </select>
+    <button id="editGender">Edit</button>
+  </p>
+  <p>
+    Country: <span id="countryDisplay"></span>
+    <input id="country" type="text" style="display: none;">
+    <button id="editCountry">Edit</button>
+  </p>
+  <p>
+    Address: <span id="addressDisplay"></span>
+    <input id="address" type="text" style="display: none;">
+    <button id="editAddress">Edit</button>
+  </p>
+  <p>
+    Municipality: <span id="municipalityDisplay"></span>
+    <input id="municipality" type="text" style="display: none;">
+    <button id="editMunicipality">Edit</button>
+  </p>
+  <p>
+    Prefecture: <span id="prefectureDisplay"></span>
+    <input id="prefecture" type="text" style="display: none;">
+    <button id="editPrefecture">Edit</button>
+  </p>
+  <p>
+    Job: <span id="jobDisplay"></span>
+    <input id="job" type="text" style="display: none;">
+    <button id="editJob">Edit</button>
+  </p>
+  <p>
+    Telephone: <span id="telephoneDisplay"></span>
+  </p>
+  <p>
+    AFM: <span id="afmDisplay"></span>
+  </p>
+  <p>
+    Latitude: <span id="latitudeDisplay"></span>
+    <input id="latitude" type="text" style="display: none;">
+    <button id="editLatitude">Edit</button>
+  </p>
+  <p>
+    Longitude: <span id="longitudeDisplay"></span>
+    <input id="longitude" type="text" style="display: none;">
+    <button id="editLongitude">Edit</button>
+  </p>
 </div>
 
-<!-- Save Changes Button -->
-<button id="saveChangesButton">Save Changes</button>
-
-
-<!-- Logout button -->
+<!-- Save and Logout Buttons -->
+<button id="saveChangesButton" style="display: none;">Save Changes</button>
 <button id="logoutButton">Logout</button>
 
+<!-- JavaScript -->
 <script>
   document.addEventListener("DOMContentLoaded", async function () {
-    // Fetch user details from the server
     try {
+      // Fetch user details
       const response = await fetch("/A3_4739/getUserDetails");
       const data = await response.json();
 
       if (data.success) {
-        // Populate user details
-        document.getElementById("username").innerText = data.username;
-        document.getElementById("email").innerText = data.email;
-        document.getElementById("firstname").innerText = data.firstname;
-        document.getElementById("lastname").innerText = data.lastname;
-        document.getElementById("birthdate").innerText = data.birthdate;
-        document.getElementById("gender").innerText = data.gender;
-        document.getElementById("afm").innerText = data.afm;
-        document.getElementById("country").innerText = data.country;
-        document.getElementById("address").innerText = data.address;
-        document.getElementById("municipality").innerText = data.municipality;
-        document.getElementById("prefecture").innerText = data.prefecture;
-        document.getElementById("job").innerText = data.job;
-        document.getElementById("telephone").innerText = data.telephone;
-        document.getElementById("latitude").innerText = data.latitude;
-        document.getElementById("longitude").innerText = data.longitude;
+        // Populate fields with fetched data
+        const fields = [
+          "username", "email", "firstname", "lastname", "birthdate", "gender",
+          "country", "address", "municipality", "prefecture", "job",
+          "telephone", "afm", "latitude", "longitude"
+        ];
+
+        fields.forEach(field => {
+          document.getElementById(`${field}Display`).innerText = data[field] || "";
+          if (document.getElementById(field)) {
+            document.getElementById(field).value = data[field] || "";
+          }
+        });
       } else {
         console.error("Failed to fetch user details:", data.message);
       }
     } catch (error) {
       console.error("Error fetching user details:", error);
     }
+  });
 
-    // Logout logic
-    document.getElementById("logoutButton").addEventListener("click", async () => {
-      try {
-        const response = await fetch("/A3_4739/logout", { method: "POST" });
-        if (response.ok) {
-          window.location.href = "/A3_4739/login.html";
-        }
-      } catch (error) {
-        console.error("Error during logout:", error);
+  // Enable Editing
+  function enableEditing(fieldId) {
+    const displayElement = document.getElementById(`${fieldId}Display`);
+    const inputElement = document.getElementById(fieldId);
+
+    displayElement.style.display = "none";
+    inputElement.style.display = "inline-block";
+
+    document.getElementById("saveChangesButton").style.display = "inline-block";
+  }
+
+  const editableFields = [
+    "email", "firstname", "lastname", "birthdate", "gender",
+    "country", "address", "municipality", "prefecture", "job",
+    "latitude", "longitude"
+  ];
+
+  editableFields.forEach(field => {
+    document.getElementById(`edit${field.charAt(0).toUpperCase() + field.slice(1)}`)
+            .addEventListener("click", () => enableEditing(field));
+  });
+
+  // Save Changes
+  document.getElementById("saveChangesButton").addEventListener("click", async () => {
+    const updatedDetails = {};
+
+    editableFields.forEach(field => {
+      const inputElement = document.getElementById(field);
+      if (inputElement && inputElement.style.display !== "none") {
+        updatedDetails[field] = inputElement.value;
       }
     });
-  });
-</script>
-
-<script>
-  document.getElementById("saveChangesButton").addEventListener("click", async () => {
-    const updatedDetails = {
-      email: document.getElementById("email").value,
-      firstname: document.getElementById("firstname").value,
-      lastname: document.getElementById("lastname").value,
-      birthdate: document.getElementById("birthdate").value,
-      gender: document.getElementById("gender").value,
-      country: document.getElementById("country").value,
-      address: document.getElementById("address").value,
-      municipality: document.getElementById("municipality").value,
-      prefecture: document.getElementById("prefecture").value,
-      job: document.getElementById("job").value,
-      latitude: document.getElementById("latitude").value,
-      longitude: document.getElementById("longitude").value,
-    };
 
     try {
       const response = await fetch("/A3_4739/updateUserDetails", {
         method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
+        headers: { "Content-Type": "application/json" },
         body: JSON.stringify(updatedDetails),
       });
 
@@ -112,14 +163,28 @@
 
       if (data.success) {
         alert("Profile updated successfully!");
+        location.reload();
       } else {
-        alert(`Failed to update profile: ${data.message}`);
+        alert(`Error updating profile: ${data.message}`);
       }
     } catch (error) {
       console.error("Error updating profile:", error);
     }
   });
-</script>
 
+  // Logout
+  document.getElementById("logoutButton").addEventListener("click", async () => {
+    try {
+      const response = await fetch("/A3_4739/logout", { method: "POST" });
+      if (response.ok) {
+        window.location.href = "/A3_4739/login.html";
+      } else {
+        alert("Failed to logout.");
+      }
+    } catch (error) {
+      console.error("Error during logout:", error);
+    }
+  });
+</script>
 </body>
 </html>
