--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,7 +76,7 @@
             <div class="form-group">
                 <label for="type">Τύπος Χρήστη*</label>
                 <select id="type" name="type" required>
-                    <option value="simple" selected>Απλός Χρήστης</option>
+                    <option value="user" selected>Απλός Χρήστης</option>
                     <option value="volunteer">Εθελοντής Πυροσβέστης</option>
                 </select>
             </div>
@@ -443,7 +443,6 @@
     <!-- Link to external JavaScript file -->
     <script src="script.js"></script>
 
-    
     <script src="https://cdn.jsdelivr.net/npm/ol@7.2.2/dist/ol.js"></script>
 
 </body>
