--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -7,98 +7,92 @@
 </head>
 <body>
 <h1>User Profile</h1>
+        <div id="userProfile">
+          <p>
+            Username: <span id="usernameDisplay"></span>
+          </p>
+          <p>
+              Email: <span id="emailDisplay"></span>
+              <input id="email" type="email" style="display: none;">
+              <button id="editEmail">Edit</button>
+          </p>
+          <p>
+            First Name: <span id="firstnameDisplay"></span>
+            <input id="firstname" type="text" style="display: none;">
+            <button id="editFirstname">Edit</button>
+          </p>
+          <p>
+            Last Name: <span id="lastnameDisplay"></span>
+            <input id="lastname" type="text" style="display: none;">
+            <button id="editLastname">Edit</button>
+          </p>
+          <p>
+            Birthdate: <span id="birthdateDisplay"></span>
+            <input id="birthdate" type="date" style="display: none;">
+            <button id="editBirthdate">Edit</button>
+          </p>
+          <p>
+            Gender: <span id="genderDisplay"></span>
+            <select id="gender" style="display: none;">
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+              <option value="other">Other</option>
+            </select>
+            <button id="editGender">Edit</button>
+          </p>
+          <p>
+            Country: <span id="countryDisplay"></span>
+            <input id="country" type="text" style="display: none;">
+            <button id="editCountry">Edit</button>
+          </p>
+          <p>
+            Address: <span id="addressDisplay"></span>
+            <input id="address" type="text" style="display: none;">
+            <button id="editAddress">Edit</button>
+          </p>
+          <p>
+            Municipality: <span id="municipalityDisplay"></span>
+            <input id="municipality" type="text" style="display: none;">
+            <button id="editMunicipality">Edit</button>
+          </p>
+          <p>
+            Prefecture: <span id="prefectureDisplay"></span>
+            <input id="prefecture" type="text" style="display: none;">
+            <button id="editPrefecture">Edit</button>
+          </p>
+          <p>
+            Job: <span id="jobDisplay"></span>
+            <input id="job" type="text" style="display: none;">
+            <button id="editJob">Edit</button>
+          </p>
+          <p>
+            Telephone: <span id="telephoneDisplay"></span>
+          </p>
+          <p>
+            AFM: <span id="afmDisplay"></span>
+          </p>
+          <p>
+            Latitude: <span id="latitudeDisplay"></span>
+            <input id="latitude" type="text" style="display: none;">
+            <button id="editLatitude">Edit</button>
+          </p>
+          <p>
+            Longitude: <span id="longitudeDisplay"></span>
+            <input id="longitude" type="text" style="display: none;">
+            <button id="editLongitude">Edit</button>
+          </p>
+        </div>
 
-<!-- User Profile Details -->
-<div id="userProfile">
-  <p>
-    Username: <span id="usernameDisplay"></span>
-  </p>
-  <p>
-    Email: <span id="emailDisplay"></span>
-    <input id="email" type="email" style="display: none;">
-    <button id="editEmail">Edit</button>
-  </p>
-  <p>
-    First Name: <span id="firstnameDisplay"></span>
-    <input id="firstname" type="text" style="display: none;">
-    <button id="editFirstname">Edit</button>
-  </p>
-  <p>
-    Last Name: <span id="lastnameDisplay"></span>
-    <input id="lastname" type="text" style="display: none;">
-    <button id="editLastname">Edit</button>
-  </p>
-  <p>
-    Birthdate: <span id="birthdateDisplay"></span>
-    <input id="birthdate" type="date" style="display: none;">
-    <button id="editBirthdate">Edit</button>
-  </p>
-  <p>
-    Gender: <span id="genderDisplay"></span>
-    <select id="gender" style="display: none;">
-      <option value="male">Male</option>
-      <option value="female">Female</option>
-      <option value="other">Other</option>
-    </select>
-    <button id="editGender">Edit</button>
-  </p>
-  <p>
-    Country: <span id="countryDisplay"></span>
-    <input id="country" type="text" style="display: none;">
-    <button id="editCountry">Edit</button>
-  </p>
-  <p>
-    Address: <span id="addressDisplay"></span>
-    <input id="address" type="text" style="display: none;">
-    <button id="editAddress">Edit</button>
-  </p>
-  <p>
-    Municipality: <span id="municipalityDisplay"></span>
-    <input id="municipality" type="text" style="display: none;">
-    <button id="editMunicipality">Edit</button>
-  </p>
-  <p>
-    Prefecture: <span id="prefectureDisplay"></span>
-    <input id="prefecture" type="text" style="display: none;">
-    <button id="editPrefecture">Edit</button>
-  </p>
-  <p>
-    Job: <span id="jobDisplay"></span>
-    <input id="job" type="text" style="display: none;">
-    <button id="editJob">Edit</button>
-  </p>
-  <p>
-    Telephone: <span id="telephoneDisplay"></span>
-  </p>
-  <p>
-    AFM: <span id="afmDisplay"></span>
-  </p>
-  <p>
-    Latitude: <span id="latitudeDisplay"></span>
-    <input id="latitude" type="text" style="display: none;">
-    <button id="editLatitude">Edit</button>
-  </p>
-  <p>
-    Longitude: <span id="longitudeDisplay"></span>
-    <input id="longitude" type="text" style="display: none;">
-    <button id="editLongitude">Edit</button>
-  </p>
-</div>
-
-<!-- Save and Logout Buttons -->
 <button id="saveChangesButton" style="display: none;">Save Changes</button>
 <button id="logoutButton">Logout</button>
 
-<!-- JavaScript -->
 <script>
   document.addEventListener("DOMContentLoaded", async function () {
     try {
-      // Fetch user details
       const response = await fetch("/A3_4739/getUserDetails");
       const data = await response.json();
 
       if (data.success) {
-        // Populate fields with fetched data
         const fields = [
           "username", "email", "firstname", "lastname", "birthdate", "gender",
           "country", "address", "municipality", "prefecture", "job",
@@ -119,14 +113,12 @@
     }
   });
 
-  // Enable Editing
   function enableEditing(fieldId) {
     const displayElement = document.getElementById(`${fieldId}Display`);
     const inputElement = document.getElementById(fieldId);
 
     displayElement.style.display = "none";
     inputElement.style.display = "inline-block";
-
     document.getElementById("saveChangesButton").style.display = "inline-block";
   }
 
@@ -152,6 +144,7 @@
       }
     });
 
+    //AJAX REQUEST
     try {
       const response = await fetch("/A3_4739/updateUserDetails", {
         method: "POST",
