--- a/src/main/webapp/success.html
+++ b/src/main/webapp/success.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Registration Successful!</h1>
 <p id="message"></p>
-<a href="/A3_4739/index.html">Go back to the homepage</a>
+<a href="loginALL.html">Go back to the homepage</a>
 
 <script>
   const params = new URLSearchParams(window.location.search);
