--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -441,7 +441,7 @@
     <div id="formDataOutput" style="margin-top: 20px; font-family: monospace;"></div>
 
     <!-- Link to external JavaScript file -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/ol@7.2.2/dist/ol.js"></script>
 
