--- a/src/main/webapp/adminDashboard.html
+++ b/src/main/webapp/adminDashboard.html
@@ -88,6 +88,10 @@
     </form>
     <div id="createVolunteerPositionResult"></div>
 
+    <h2>Volunteer Requests</h2>
+    <div id="volunteerRequestsContainer"></div>
+
+
     <!-- STEP 3: Logout Button -->
     <div class="logout">
         <button onclick="logout()">Logout</button>
