--- a/src/main/webapp/guest.html
+++ b/src/main/webapp/guest.html
@@ -6,157 +6,27 @@
     <title>Incident API Test</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script scr="js/guest.js"></script>
-    <style>
-        body {
-            background-color: #f8d7da;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        h1, h2 {
-            color: #333;
-        }
-
-        h1#welcome-title {
-            font-size: 3em;
-        }
-
-        form {
-            margin: 30px auto;
-            padding: 30px;
-            background: white;
-            max-width: 600px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: left;
-        }
-
-        input, button {
-            display: block;
-            width: 90%;
-            margin: 10px auto;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        button {
-            background-color: #333;
-            color: white;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        button:hover {
-            background-color: #555;
-        }
-
-        #active-incidents-container {
-            margin: 20px auto;
-            padding: 20px;
-            background: white;
-            max-width: 600px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        li {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        p {
-            color: red;
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 20px 0;
-            width: 100%;
-        }
-
-        .footer-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-            text-align: left;
-        }
-
-        footer h3 {
-            margin-bottom: 10px;
-        }
-
-        footer p {
-            margin: 5px 0;
-        }
-
-        footer table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-        }
-
-        footer th, footer td {
-            padding: 10px;
-            border: 1px solid #495057;
-        }
-
-        footer th {
-            background-color: #495057;
-        }
-
-        footer a {
-            color: #17a2b8;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .footer-container {
-                text-align: center;
-            }
-
-            footer table {
-                display: block;
-                overflow-x: auto;
-                white-space: nowrap;
-            }
-        }
-
-        /* Add padding to the body to create space above footer */
-        body {
-            padding-bottom: 150px; /* Υποθέτουμε ότι το ύψος του footer είναι περίπου 150px */
-        }
-    </style>
+    <link rel="stylesheet" href="css/guest.css">
 </head>
 <body>
 <h1 id="welcome-title">Incident API</h1>
 
 <h2>Add Incident</h2>
-<form id="add-incident-form">
-    <input type="text" id="incident_type" placeholder="Incident Type (fire/accident)" required>
-    <input type="text" id="description" placeholder="Description" required>
-    <input type="text" id="user_type" placeholder="User Type (guest/admin/user)" required>
-    <input type="text" id="user_phone" placeholder="User Phone" required>
-    <input type="text" id="address" placeholder="Address" required>
-    <input type="number" id="lat" placeholder="Latitude (e.g., 35.42)" step="0.0001">
-    <input type="number" id="lon" placeholder="Longitude (e.g., 25.33)" step="0.0001">
-    <input type="text" id="prefecture" placeholder="Prefecture (heraklion/chania/rethymno/lasithi)" required>
-    <input type="text" id="municipality" placeholder="Municipality" required>
-    <button type="submit">Add Incident</button>
-</form>
-<p id="add-incident-result"></p>
+<div id="addIncidentContainer">
+    <form id="add-incident-form">
+        <input type="text" id="incident_type" placeholder="Incident Type (fire/accident)" required>
+        <input type="text" id="description" placeholder="Description" required>
+        <input type="text" id="user_type" placeholder="User Type (guest/admin/user)" required>
+        <input type="text" id="user_phone" placeholder="User Phone" required>
+        <input type="text" id="address" placeholder="Address" required>
+        <input type="number" id="lat" placeholder="Latitude (e.g., 35.42)" step="0.0001">
+        <input type="number" id="lon" placeholder="Longitude (e.g., 25.33)" step="0.0001">
+        <input type="text" id="prefecture" placeholder="Prefecture (heraklion/chania/rethymno/lasithi)" required>
+        <input type="text" id="municipality" placeholder="Municipality" required>
+        <button type="submit">Add Incident</button>
+    </form>
+    <p id="add-incident-result"></p>
+</div>
 
 <h2>View Active Incidents</h2>
 <form id="get-incidents-form">
