--- a/src/main/webapp/userDashboard.html
+++ b/src/main/webapp/userDashboard.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Dashboard</title>
-    <script src="js/logout.js"></script>
-    <script src="js/userDashboard.js"></script>
 </head>
 <body>
 <div class="dashboard">
@@ -18,8 +16,7 @@
         </p>
         <p>
             Email: <span id="emailDisplay"></span>
-            <input id="email" type="email" style="display: none;">
-            <button id="editEmail">Edit</button>
+
         </p>
         <p>
             First Name: <span id="firstnameDisplay"></span>
@@ -90,67 +87,97 @@
 </div>
 <br>
 <button id="saveChangesButton" style="display: none;">Save Changes</button>
+
+<br>
+
+<h2>Add Incident</h2>
+<form id="add-incident-form">
+    <label for="incident_type_input">Incident Type:</label>
+    <input type="text" id="incident_type_input" placeholder="Incident Type (fire/accident)" required>
+    <br>
+
+    <label for="description_input">Description:</label>
+    <input type="text" id="description_input" placeholder="Description" required>
+    <br>
+
+    <label for="user_type_input">User Type:</label>
+    <input type="text" id="user_type_input" placeholder="User Type (guest/admin/user)" required>
+    <br>
+
+    <label for="user_phone_input">User Phone:</label>
+    <input type="text" id="user_phone_input" placeholder="User Phone" required>
+    <br>
+
+    <label for="address_input">Address:</label>
+    <input type="text" id="address_input" placeholder="Address" required>
+    <br>
+
+    <label for="lat_input">Latitude:</label>
+    <input type="number" id="lat_input" placeholder="Latitude (e.g., 35.42)" step="0.0001">
+    <br>
+
+    <label for="lon_input">Longitude:</label>
+    <input type="number" id="lon_input" placeholder="Longitude (e.g., 25.33)" step="0.0001">
+    <br>
+
+    <label for="prefecture_input">Prefecture:</label>
+    <input type="text" id="prefecture_input" placeholder="Prefecture (heraklion/chania/rethymno/lasithi)" required>
+    <br>
+
+    <label for="municipality_input">Municipality:</label>
+    <input type="text" id="municipality_input" placeholder="Municipality" required>
+    <br>
+
+    <button type="submit">Add Incident</button>
+</form>
+<p id="add-incident-result"></p>
+
+<br>
+
+<div id="incidentList" class="incident-list">
+    <h2>Active Incidents Near You</h2>
+    <p>Loading incidents...</p>
+</div>
+
+<br>
+
+<h2>Public messages for running incidents</h2>
+<div id="publicMessagesContainer">
+    <p>Loading public messages...</p>
+</div>
+
+<br>
+
+<div id="sendMessageSection">
+    <h2>Send a Message</h2>
+    <form id="sendMessageForm">
+        <label for="incidentSelect">Select Incident:</label>
+        <select id="incidentSelect" required>
+            <option value="">-- Select an Incident --</option>
+        </select>
+        <br>
+        <label for="recipient">Recipient:</label>
+        <select id="recipient" required>
+            <option value="">-- Select Recipient --</option>
+            <option value="public">Public</option>
+            <option value="admin">Admin</option>
+        </select>
+        <br>
+        <label for="messageContent">Message:</label>
+        <textarea id="messageContent" placeholder="Enter your message" required></textarea>
+        <br>
+        <button type="submit">Send Message</button>
+    </form>
+    <p id="sendMessageResult"></p>
+</div>
+
+
+<br>
 <div class="logout">
     <button onclick="logout()">Logout</button>
 </div>
-<script>
-    function enableEditing(fieldId) {
-        const displayElement = document.getElementById(`${fieldId}Display`);
-        const inputElement = document.getElementById(fieldId);
 
-        displayElement.style.display = "none";
-        inputElement.style.display = "inline-block";
-        document.getElementById("saveChangesButton").style.display = "inline-block";
-    }
-
-    const editableFields = [
-        "email", "firstname", "lastname", "birthdate", "gender",
-        "country", "address", "municipality", "prefecture", "job",
-        "latitude", "longitude"
-    ];
-
-    editableFields.forEach(field => {
-        const buttonId = `edit${field.charAt(0).toUpperCase() + field.slice(1)}`;
-        console.log(`Looking for button with ID: ${buttonId}`);
-        const button = document.getElementById(buttonId);
-        if (button) {
-            button.addEventListener("click", () => enableEditing(field));
-        } else {
-            console.error(`Button with ID "${buttonId}" not found.`);
-        }
-    });
-
-    // Save Changes
-    document.getElementById("saveChangesButton").addEventListener("click", async () => {
-        const updatedDetails = {};
-
-        editableFields.forEach(field => {
-            const inputElement = document.getElementById(field);
-            if (inputElement && inputElement.style.display !== "none") {
-                updatedDetails[field] = inputElement.value;
-            }
-        });
-
-        //AJAX REQUEST
-        try {
-            const response = await fetch("/A3_4739/updateUserDetails", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(updatedDetails),
-            });
-
-            const data = await response.json();
-
-            if (data.success) {
-                alert("Profile updated successfully!");
-                location.reload();
-            } else {
-                alert(`Error updating profile: ${data.message}`);
-            }
-        } catch (error) {
-            console.error("Error updating profile:", error);
-        }
-    });
-</script>
+<script src="js/logout.js"></script>
+<script src="js/userDashboard.js"></script>
 </body>
 </html>
