--- a/src/main/webapp/guest.html
+++ b/src/main/webapp/guest.html
@@ -128,44 +128,42 @@
     });
 </script>
 
-<h2>Στείλτε Ερώτηση στο ChatGPT</h2>
+<h2>Send a Question to ChatGPT</h2>
 <form id="chatgpt-form">
     <select id="chatgpt-default-questions">
-        <option value="Πως να αντιμετωπίσω ένα περιστατικό φωτιάς;">Πως να αντιμετωπίσω ένα περιστατικό φωτιάς</option>
-        <option value="Πως να αντιμετωπίσω ένα περιστατικό ατυχήματος;">Πως να αντιμετωπίσω ένα περιστατικό ατυχήματος</option>
-        <option value="Δώσε μου πληροφορίες για την καλύτερη πρόληψη φωτιάς;">Δώσε μου πληροφορίες για την καλύτερη πρόληψη φωτιάς</option>
-        <option value="Δώσε μου πληροφορίες για την καλύτερη πρόληψη ατυχήματος;">Δώσε μου πληροφορίες για την καλύτερη πρόληψη ατυχήματος</option>
+        <option value="How to handle a fire incident?">How to handle a fire incident?</option>
+        <option value="How to handle an accident incident?">How to handle an accident incident?</option>
+        <option value="Give me information on the best fire prevention methods.">Give me information on the best fire prevention methods.</option>
+        <option value="Give me information on the best accident prevention methods.">Give me information on the best accident prevention methods.</option>
     </select>
-    <input type="text" id="chatgpt-custom-question" placeholder="Πληκτρολογήστε τη δική σας ερώτηση">
-    <button type="submit">Ρώτησε το ChatGPT</button>
+    <input type="text" id="chatgpt-custom-question" placeholder="Type your own question">
+    <button type="submit">Ask ChatGPT</button>
 </form>
 <p id="chatgpt-response"></p>
 
 
-//// links gia site
+
 <footer>
     <div class="footer-container">
-        <h3>Πληροφορίες για άλλα sites και links</h3>
-        <p>Βασικές Πληροφορίες για website</p>
-        <p>Ενδεικτικοί σύνδεσμοι ακολουθούν. Γενικά όμως να χρησιμοποιείτε μηχανές αναζήτησης για ό,τι απορία/πρόβλημα έχετε.</p>
+        <h3>Information for other sites and links</h3>
         <table>
             <thead>
             <tr>
-                <th>Θέμα</th>
-                <th>Σύνδεσμος</th>
+                <th>Topic</th>
+                <th>Link</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td>Σελίδα για Πυροσβεστική</td>
+                <td>Fire Service Page</td>
                 <td><a href="https://www.fireservice.gr/" target="_blank">https://www.fireservice.gr/</a></td>
             </tr>
             <tr>
-                <td>Σελίδα για χάρτες πυρκαγιών</td>
+                <td>Fire Maps Page</td>
                 <td><a href="https://civilprotection.gov.gr/arxeio-imerison-xartwn" target="_blank">https://civilprotection.gov.gr/arxeio-imerison-xartwn</a></td>
             </tr>
             <tr>
-                <td>Άλλα links</td>
+                <td>Other links</td>
                 <td>
                     <a href="https://www.facebook.com/" target="_blank">Facebook</a> |
                     <a href="https://twitter.com/" target="_blank">Twitter</a> |
@@ -176,6 +174,7 @@
         </table>
     </div>
 </footer>
+
 
 </body>
 </html>
