--- a/src/main/webapp/userDashboard.html
+++ b/src/main/webapp/userDashboard.html
@@ -8,7 +8,6 @@
 <body>
 <div class="dashboard">
     <h1>User Dashboard</h1>
-    <p>Just User Page</p>
 
     <div id="userProfile">
         <p>
@@ -179,5 +178,6 @@
 
 <script src="js/logout.js"></script>
 <script src="js/userDashboard.js"></script>
+<link rel="stylesheet" href="css/user.css">
 </body>
 </html>
