--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Εγγραφή Χρήστη</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="form-container">
-        <h2>Εγγραφή Χρήστη</h2>
+        <h2>Sign Up</h2>
         <form id="registrationForm" action="/A3_4739/register" method="POST">
             <!-- Username -->
             <div class="form-group">
@@ -24,7 +24,7 @@
 
             <!-- Password Field -->
             <div class="form-group">
-                <label for="password">Κωδικός Χρήστη*</label>
+                <label for="password">Password*</label>
                 <div class="password-container">
                     <input type="password" id="password" name="password" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,18}$" required>
                     <button type="button" id="togglePassword">Show</button>
@@ -35,49 +35,49 @@
 
             <!-- Confirm Password Field -->
             <div class="form-group">
-                <label for="confirm-password">Επιβεβαίωση Κωδικού*</label>
+                <label for="confirm-password">Confirm Password*</label>
                 <input type="password" id="confirm-password" name="password" required>
                 <span id="password-error" style="color: red;"></span>
             </div>
 
             <!-- First Name -->
             <div class="form-group">
-                <label for="firstname">Όνομα*</label>
+                <label for="firstname">Name*</label>
                 <input type="text" id="firstname" name="firstname" pattern="^[A-Za-zΑ-Ωα-ω]{3,30}$" required>
             </div>
 
             <!-- Last Name -->
             <div class="form-group">
-                <label for="lastname">Επώνυμο*</label>
+                <label for="lastname">Surname*</label>
                 <input type="text" id="lastname" name="lastname" pattern="^[A-Za-zΑ-Ωα-ω]{3,30}$" required>
             </div>
 
             <!-- Birthdate -->
             <div class="form-group">
-                <label for="birthdate">Ημερομηνία Γέννησης*</label>
+                <label for="birthdate">Date of Birth*</label>
                 <input type="date" id="birthdate" name="birthdate" min="1920-01-01" max="2011-12-31" value="1980-01-01" required>
             </div>
 
             <!-- Gender -->
             <div class="form-group">
-                <label>Φύλο*</label>
-                <input type="radio" name="gender" value="male" required> Άντρας
-                <input type="radio" name="gender" value="female"> Γυναίκα
-                <input type="radio" name="gender" value="other"> Άλλο
+                <label>Sex*</label>
+                <input type="radio" name="gender" value="male" required> Male
+                <input type="radio" name="gender" value="female"> Female
+                <input type="radio" name="gender" value="other"> Other
             </div>
 
             <!-- AFM -->
             <div class="form-group">
-                <label for="afm">ΑΦΜ*</label>
+                <label for="afm">AFM*</label>
                 <input type="text" id="afm" name="afm" pattern="\d{10}" required>
             </div>
 
             <!-- User Type -->
             <div class="form-group">
-                <label for="type">Τύπος Χρήστη*</label>
+                <label for="type">User Type*</label>
                 <select id="type" name="type" required>
-                    <option value="user" selected>Απλός Χρήστης</option>
-                    <option value="volunteer">Εθελοντής Πυροσβέστης</option>
+                    <option value="user" selected>Simple User</option>
+                    <option value="volunteer">Volunteer Firemen</option>
                 </select>
             </div>
 
@@ -85,29 +85,29 @@
             <div id="volunteerFields" style="display: none;">
                 <!-- Category -->
                 <div class="form-group">
-                    <label for="volunteer_type">Κατηγορία*</label>
+                    <label for="volunteer_type">Category*</label>
                     <select id="volunteer_type" name="volunteer_type">
-                        <option value="simple">Μάχιμοι Εθελοντές πυροσβέστες</option>
-                        <option value="driver">Οδηγοί-Χειριστές Πυροσβεστικών οχημάτων</option>
+                        <option value="simple">Combat Volunteer Firefighters</option>
+                        <option value="driver">Drivers-Operators of Fire Trucks</option>
                     </select>
                 </div>
 
                 <!-- Height -->
                 <div class="form-group">
-                    <label for="height">Ύψος (1.45 - 2.20m)*</label>
+                    <label for="height">Height (1.45 - 2.20m)*</label>
                     <input type="number" id="height" name="height" min="1.45" max="2.20" step="0.01">
                 </div>
 
                 <!-- Weight -->
                 <div class="form-group">
-                    <label for="weight">Βάρος (40 - 160kg)*</label>
+                    <label for="weight">Weight (40 - 160kg)*</label>
                     <input type="number" id="weight" name="weight" min="40" max="160">
                 </div>
             </div>
 
             <!-- Country -->
             <div class="form-group">
-                <label for="country">Χώρα*</label>
+                <label for="country">Country*</label>
                 <select id="country" name="country" required>
                     <option value="AF">Afghanistan</option>
                     <option value="AX">Åland Islands</option>
@@ -366,30 +366,30 @@
 
             <!-- Prefecture -->
             <div class="form-group">
-                <label for="prefecture">Νομός*</label>
+                <label for="prefecture">Region*</label>
                 <select id="prefecture" name="prefecture" required>
-                    <option value="Chania">Χανιά</option>
-                    <option value="Heraklion" selected>Ηράκλειο</option>
-                    <option value="Rethymno">Ρέθυμνο</option>
-                    <option value="Lasithi">Λασίθι</option>
+                    <option value="Chania">Chania</option>
+                    <option value="Heraklion" selected>Heraklion</option>
+                    <option value="Rethymno">Rethymno</option>
+                    <option value="Lasithi">Lasithi</option>
                 </select>
             </div>
 
             <!-- Municipality -->
             <div class="form-group">
-                <label for="municipality">Δήμος Διαμονής*</label>
+                <label for="municipality">Municipality*</label>
                 <input type="text" id="municipality" name="municipality" pattern=".{3,30}" required>
             </div>
 
             <!-- Address -->
             <div class="form-group">
-                <label for="address">Διεύθυνση Οικίας*</label>
+                <label for="address">Address*</label>
                 <input type="text" id="address" name="address" pattern=".{10,150}" required>
             </div>
 
             <!-- Address Verification Button -->
             <div class="form-group">
-                <button type="button" id="verifyAddress">Επαλήθευση Διεύθυνσης</button>
+                <button type="button" id="verifyAddress">Confirm Address</button>
                 <span id="address-error" style="color: red;"></span>
             </div>
 
@@ -411,13 +411,13 @@
 
             <!-- Job -->
             <div class="form-group">
-                <label for="job">Επάγγελμα</label>
+                <label for="job">Job</label>
                 <input type="text" id="job" name="job" pattern=".{3,30}">
             </div>
 
             <!-- Phone Number -->
             <div class="form-group">
-                <label for="telephone">Κινητό Τηλέφωνο*</label>
+                <label for="telephone">Phone Number*</label>
                 <input type="tel" id="telephone" name="telephone" pattern="\d{10,14}" required>
             </div>
 
@@ -425,13 +425,13 @@
             <div class="form-group">
                 <input type="checkbox" id="terms" name="terms" required>
                 <label for="terms" id="termsText" class="terms">
-                    Απαγορεύεται η άσκοπη χρήση της εφαρμογής. Συμφωνώ πως η άσκοπη χρήση της θα διώκεται ποινικά.
+                    Unnecessary use of the application is prohibited. I agree that unnecessary use will be prosecuted.
                 </label>
             </div>
 
             <!-- Submit Button -->
             <div class="form-group">
-                <button type="submit">Εγγραφή</button>
+                <button type="submit">Continue</button>
             </div>
 
         </form>
