--- a/src/main/webapp/volunteerDashboard.html
+++ b/src/main/webapp/volunteerDashboard.html
@@ -8,7 +8,6 @@
 <body>
 <div class="dashboard">
     <h1>Volunteer Dashboard</h1>
-    <p>Just Volunteer Page</p>
 
     <div id="userProfile">
         <p>
@@ -196,5 +195,6 @@
 
 <script src="js/logout.js"></script>
 <script src="js/volunteerDashboard.js"></script>
+<link rel="stylesheet" href="css/vol.css">
 </body>
 </html>
